# wrkflw

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/: main.py
src/wrkflw/: __init__.py  tasks.py  wrkflw.py
tests/: example.py  example_r_tasks.py  example_tasks.py  example_wrkflw.py  r_sample_code_fail.bat  r_sample_code_succeed.bat  sandbox.py  shell_example.bat  test_wrkflw.py
tests/r_sample_code/: example_r_tasks.py  main.R  proc_commandline_args.R  proc_libraries.R
